feat: running on non baked plugins on hotspot (#32)